# edencommon

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: edencommon_linux.yml  edencommon_windows.yml  getdeps_windows.yml
CMake/: eden-config.h.in  edencommon-config.cmake.in
eden/common/: eden-config.h
eden/common/os/: CMakeLists.txt  ProcessId.cpp  ProcessId.h
eden/common/os/test/: CMakeLists.txt  ProcessIdTest.cpp
eden/common/telemetry/: CMakeLists.txt  DurationScope.h  DynamicEvent.cpp  DynamicEvent.h  LogEvent.h  NullStructuredLogger.h  RequestMetricsScope.cpp  RequestMetricsScope.h  ScribeLogger.h  ScubaStructuredLogger.cpp  ScubaStructuredLogger.h  SessionId.cpp  SessionId.h  SessionInfo.cpp  SessionInfo.h  Stats.h  StatsGroup.cpp  StatsGroup.h  StructuredLogger.cpp  StructuredLogger.h  StructuredLoggerFactory.h  SubprocessScribeLogger.cpp  SubprocessScribeLogger.h  TraceBus-inl.h  TraceBus.h  Tracing.cpp  Tracing.h
eden/common/telemetry/test/: DynamicEventTest.cpp  ScubaStructuredLoggerTest.cpp  SubprocessScribeLoggerTest.cpp  TraceBusTest.cpp  TracingBenchmark.cpp  TracingTest.cpp
eden/common/testharness/: CMakeLists.txt  TempFile.cpp  TempFile.h
eden/common/testharness/test/: TempFileTest.cpp
eden/common/utils/: BucketedLog.h  Bug.cpp  Bug.h  CMakeLists.txt  CaseSensitivity.h  CoverageSet.cpp  CoverageSet.h  DirType.h  EnumValue.h  ErrnoUtils.h  FSDetect.h  FaultInjector.cpp  FaultInjector.h  FileDescriptor.cpp  FileDescriptor.h  FileOffset.h  FileUtils.cpp  FileUtils.h  Future.h  FutureUnixSocket.cpp  FutureUnixSocket.h  Guid.cpp  Guid.h  Handle.h  Hash.h  IDGen.cpp  IDGen.h  ImmediateFuture-inl.h  ImmediateFuture-pre.h  ImmediateFuture.cpp  ImmediateFuture.h  IoFuture.cpp  IoFuture.h  LazyInitialize.h  LeaseCache.h  MappedDiskVector.h  Match.h  Memory.cpp  Memory.h  OptionSet.h  (+45 more)
eden/common/utils/benchharness/: Bench.cpp  Bench.h
eden/common/utils/test/: BucketedLogTest.cpp  BugTest.cpp  CMakeLists.txt  CaseSensitivityTest.cpp  CoverageSetTest.cpp  FaultInjectorTest.cpp  FileDescriptorTest.cpp  FileUtilsTest.cpp  FutureTest.cpp  GuidTest.cpp  IDGenBenchmark.cpp  IDGenTest.cpp  ImmediateFutureBenchmark.cpp  ImmediateFutureTest.cpp  IoFutureTest.cpp  LazyInitializeTest.cpp  MappedDiskVectorBenchmark.cpp  MappedDiskVectorTest.cpp  MatchTest.cpp  MemoryTest.cpp  OptionSetTest.cpp  PathFuncsTest.cpp  PathMapMutatorTest.cpp  PathMapTest.cpp  ProcessInfoCacheBenchmark.cpp  ProcessInfoCacheTest.cpp  ProcessInfoTest.cpp  ProcessNameCacheBenchmark.cpp  ProcessNameCacheTest.cpp  RefPtrBenchmark.cpp  RefPtrTest.cpp  ScopedEnvVar.cpp  ScopedEnvVar.h  SpawnedProcessTest.cpp  StringConvTest.cpp  StringTest.cpp  SystemErrorTest.cpp  ThrowTest.cpp  TryTest.cpp  UnixSocketTest.cpp  (+2 more)
eden/common/utils/windows/: PlatformWindowsUnixSock.cpp  PlatformWindowsUnixSock.h  WinError.cpp  WinUtil.cpp
